add output of code

--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
         </div>
       </nav>
       <div class="hero_baner">
-        <h3>Welcome To Glint</h3>
-        <h1>
-          We are a creative Group <br />
-          of people who design <br />
-          Influncial brands and <br />
-          digital experience.
-        </h1>
-        <button>Start a project</button>
-        <button>More About us</button>
+        <div class="hero-cont">
+          <p>Welcome To Glint</p>
+          <h1>
+            We are a creative Group <br />
+            of people who design <br />
+            Influncial brands and <br />
+            digital experience.
+          </h1>
+          <button>Start a project</button>
+          <button>More About us</button>
+        </div>
+        <div class="hero_img">
+          <img
+            src="./premium_photo-1661281412140-dfb328ae967b.avif"
+            alt="hero img"
+          />
+        </div>
       </div>
     </div>
   </body>
